--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,24 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Node / Frontend (Vite/React)
+node_modules/
+frontend/node_modules/
+frontend/dist/
+*.tsbuildinfo
+
+# Editor/OS
+.vscode/
+.DS_Store
+Thumbs.db
+
+# Project env/config
+*.env
+*.env.local
+backend/.env
+frontend/.env
+
+# Logs
+*.log
+logs/
